# RabbitCommon

./: .gitignore  .travis.yml  Authors.md  Authors_zh_CN.md  CMakeLists.txt  ChangeLog.md  ChangeLog_zh_CN.md  Doxyfile.in  README.md  README_zh_CN.md  RabbitCommon.keystore  RabbitCommon.pro  appveyor.yml  appveyor.yml.bak  build_android.sh  build_debpackage.sh  deploy.sh  package.json  rabbitcommon.rb  tag.sh  vcpkg.json
App/: App.pro  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Service.cpp  Service.pro  main.cpp
App/GenerateUpdateFile/: CMakeLists.txt  GenerateUpdateFile.cpp  GenerateUpdateFile.h  GenerateUpdateFile.pro  main.cpp
App/Resource/Translations/: ExampleDownloadFile_ar.ts  ExampleDownloadFile_ca.ts  ExampleDownloadFile_cs.ts  ExampleDownloadFile_da.ts  ExampleDownloadFile_de.ts  ExampleDownloadFile_el.ts  ExampleDownloadFile_en.ts  ExampleDownloadFile_en_GB.ts  ExampleDownloadFile_es.ts  ExampleDownloadFile_et.ts  ExampleDownloadFile_fi.ts  ExampleDownloadFile_fr.ts  ExampleDownloadFile_gd.ts  ExampleDownloadFile_gl.ts  ExampleDownloadFile_hu.ts  ExampleDownloadFile_it.ts  ExampleDownloadFile_ja.ts  ExampleDownloadFile_ko.ts  ExampleDownloadFile_nb.ts  ExampleDownloadFile_ne.ts  ExampleDownloadFile_nl.ts  ExampleDownloadFile_nn.ts  ExampleDownloadFile_oc.ts  ExampleDownloadFile_pl.ts  ExampleDownloadFile_pt_BR.ts  ExampleDownloadFile_pt_PT.ts  ExampleDownloadFile_ro.ts  ExampleDownloadFile_ru.ts  ExampleDownloadFile_sk.ts  ExampleDownloadFile_sl.ts  ExampleDownloadFile_sv.ts  ExampleDownloadFile_th.ts  ExampleDownloadFile_tr.ts  ExampleDownloadFile_uk.ts  ExampleDownloadFile_zh_CN.ts  ExampleDownloadFile_zh_TW.ts  ExampleFileTransfer_ar.ts  ExampleFileTransfer_ca.ts  ExampleFileTransfer_cs.ts  ExampleFileTransfer_da.ts  (+70 more)
App/Tests/: MainWindow.cpp  main.cpp
App/android/: AndroidManifest.xml
FileBrowser/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
FileBrowser/Resource/: FileBrowser.rc
FileBrowser/Resource/Translations/: FileBrowser_ar.ts  FileBrowser_ca.ts  FileBrowser_cs.ts  FileBrowser_da.ts  FileBrowser_de.ts  FileBrowser_el.ts  FileBrowser_en.ts  FileBrowser_en_GB.ts  FileBrowser_es.ts  FileBrowser_et.ts  FileBrowser_fi.ts  FileBrowser_fr.ts  FileBrowser_gd.ts  FileBrowser_gl.ts  FileBrowser_hu.ts  FileBrowser_it.ts  FileBrowser_ja.ts  FileBrowser_ko.ts  FileBrowser_nb.ts  FileBrowser_ne.ts  FileBrowser_nl.ts  FileBrowser_nn.ts  FileBrowser_oc.ts  FileBrowser_pl.ts  FileBrowser_pt_BR.ts  FileBrowser_pt_PT.ts  FileBrowser_ro.ts  FileBrowser_ru.ts  FileBrowser_sk.ts  FileBrowser_sl.ts  FileBrowser_sv.ts  FileBrowser_th.ts  FileBrowser_tr.ts  FileBrowser_uk.ts  FileBrowser_zh_CN.ts  FileBrowser_zh_TW.ts
FileBrowser/android/: AndroidManifest.xml
MimeTypeBrowser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mimetypebrowser.pro  mimetypemodel.cpp  mimetypemodel.h
MimeTypeBrowser/Resource/Translations/: MimeTypeBrowser_ar.ts  MimeTypeBrowser_ca.ts  MimeTypeBrowser_cs.ts  MimeTypeBrowser_da.ts  MimeTypeBrowser_de.ts  MimeTypeBrowser_el.ts  MimeTypeBrowser_en.ts  MimeTypeBrowser_en_GB.ts  MimeTypeBrowser_es.ts  MimeTypeBrowser_et.ts  MimeTypeBrowser_fi.ts  MimeTypeBrowser_fr.ts  MimeTypeBrowser_gd.ts  MimeTypeBrowser_gl.ts  MimeTypeBrowser_hu.ts  (+21 more)
MimeTypeBrowser/android/: AndroidManifest.xml  build.gradle.bak
Src/: CMakeLists.txt  Download.cpp  Download.h  DownloadFile.cpp  DownloadFile.h  EvpAES.cpp  EvpAES.h  GlobalDir.cpp  GlobalDir.h  IconUtils.cpp  IconUtils.h  Log.cpp  Log.h  RabbitCommon.pri  RabbitCommonDir.cpp  RabbitCommonDir.h  RabbitCommonEncrypt.cpp  RabbitCommonEncrypt.h  RabbitCommonGlobalDir.cpp  RabbitCommonGlobalDir.h  RabbitCommonLog.cpp  RabbitCommonLog.h  RabbitCommonRegister.cpp  RabbitCommonRegister.h  RabbitCommonService.cpp  RabbitCommonService.h  RabbitCommonStyle.cpp  RabbitCommonStyle.h  RabbitCommonTools.cpp  RabbitCommonTools.h  RabbitRecentMenu.cpp  RabbitRecentMenu.h  ServiceWindows.cpp  ServiceWindows.h  Src.pro  TitleBar.cpp  TitleBar.h  Tools.cpp  Tools.h  rabbitcommon_export.h  (+1 more)
Src/AdminAuthoriser/: adminauthoriser.cpp  adminauthoriser.h  adminauthorization_dummy.cpp  adminauthorization_mac.cpp  adminauthorization_p.h  adminauthorization_win.cpp  adminauthorization_x11.cpp
Src/CoreDump/: MiniDumper.cpp  MiniDumper.h  QMiniDumper.cpp  StackTrace.cpp  StackTrace.h
Src/DlgAbout/: DlgAbout.cpp  DlgAbout.h  DlgAbout.ui  Information.cpp  Information.h  Information.ui
Src/DockFolderBrowser/: DockFolderBrowser.cpp  DockFolderBrowser.h  DockFolderBrowser.ui
Src/FileBrowser/: FileBroserTreeView.cpp  FileBroserTreeView.h  FileBrowser.cpp  FileBrowser.h  UndoCommand.cpp  UndoCommand.h
Src/FileTransfer/: ExampleFileTransfer.cpp  ExampleFileTransfer.h  RequestCurl.cpp  RequestCurl.h  WorkerCurl.cpp  WorkerCurl.h  WorkerFileTransfer.cpp  WorkerFileTransfer.h
Src/FolderBrowser/: FolderBrowser.cpp  FolderBrowser.h  FolderBrowser.ui
Src/FrmStyle/: FrmStyle.cpp  FrmStyle.h  FrmStyle.ui
Src/FrmUpdater/: FrmUpdater.cpp  FrmUpdater.h  FrmUpdater.ui
Src/Log/: DlgEdit.cpp  DlgEdit.h  DlgEdit.ui  DlgFilter.cpp  DlgFilter.h  DlgFilter.ui  DockDebugLog.cpp  DockDebugLog.h  DockDebugLog.ui  Log.cpp  Log.h
Src/Multimedia/: FrmMediaDevices.cpp  FrmMediaDevices.h
Src/QUIWidget/: QUIWidget.cpp  QUIWidget.h
Src/Resource/: Resource.qrc  ResourceRabbitCommon.qrc
Src/Style/: FrmStyle.cpp  FrmStyle.h  FrmStyle.ui  Style.cpp  Style.h
Src/ThreadPool/: ThreadPool.cpp  ThreadPool.h  Worker.cpp  Worker.h
Src/etc/: log4cplus.conf  log4cxx.conf  log4qt.conf  logqt.conf  logqt.ini
Src/export/: rabbitcommon_export.h  rabbitcommon_export_windows.h
Tests/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TestGenerateDefaultJsonFile.cpp  TestGenerateDefaultJsonFile.h  TestGenerateJsonFile.cpp  TestGenerateJsonFile.h  TestUpdater.cpp  TestUpdater.h  Tests.pro  UnitTests.cpp  UnitTests.h  main.cpp
Tests/android/: AndroidManifest.xml
Tests/data/: redirect.json
UnitTests/: CMakeLists.txt  TestGenerateJsonFile.cpp  TestGenerateJsonFile.h  UnitTests.cpp  UnitTests.h
(+807 files in other folders)
